--- a/appsettings.json
+++ b/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "AppMvcConnectionString": "Data Source=localhost, 1433; Initial Catalog=appmvc; User ID=SA; Password=Password123; TrustServerCertificate=true"
+  }
 }
