--- a/appsettings.json
+++ b/appsettings.json
@@ -8,5 +8,16 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "AppMvcConnectionString": "Data Source=localhost, 1433; Initial Catalog=appmvc; User ID=SA; Password=Password123; TrustServerCertificate=true"
+  },
+  "Authentication": {
+    "Google": {
+      "ClientId": "787571736820-agdh0bmhkgf2cfr910j0dk5sg8gcien1.apps.googleusercontent.com",
+      "ClientSecret": "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"
+    },
+    "Facebook": {
+      "AppId": "914646060435121",
+      "AppSecret": "b7659b5c4084d1a3e1a7bb7e81dbead4"
+    }
+  
   }
 }
